run and solid.